<resources>
    <string name="app_name">Stock Pulse</string>
    <string name="open_menu_hint">open menu</string>
    <string name="close_menu_hint">close menu</string>
    <string name="home_button">Home</string>
    <string name="favourites_button">Favourites</string>
    <string name="simulator_button">Simulator</string>
    <string name="about_button">About Us</string>
    <string name="logout_button">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="undefined_hint">undefined</string>
    <string name="undefined_hint2">undefined in Finnhub</string>
</resources>